# Social-Insurance-Institution-ZUS-Logic

./: CMakeLists.txt  README.md
src/: main.cpp
src/models/: Address.hpp  Citizen.hpp  ContributionEntry.hpp  ContributionRate.hpp  Date.hpp  Employer.hpp  EmploymentContract.hpp  MonthlyDeclaration.hpp  Person.hpp
src/services/: B2BStrategy.hpp  CitizenService.hpp  ContributionCalculator.hpp  DeclarationService.hpp  ICalculationStrategy.hpp  UoPStrategy.hpp  UoZStrategy.hpp
src/validators/: NipValidator.hpp  PeselValidator.hpp  RegonValidator.hpp
tests/: CMakeLists.txt  ValidatorsTests.cpp
tests/models/: CitizenTests.cpp  ContributionEntryTests.cpp  ContributionRateTests.cpp  DateTests.cpp  EmployerTests.cpp  EmploymentContractTests.cpp  MonthlyDeclarationTests.cpp
tests/services/: CitizenServiceTests.cpp  ContributionCalculatorTests.cpp  DeclarationServiceTests.cpp
tests/validators/: NipValidatorsTests.cpp  PeselValidatorTests.cpp  RegonValidatorTests.cpp
